# prophecy

./: Cargo.toml
docs/: README.md
docs/.obsidian/: workspace.json
src/: config.rs  main.rs
src/api/: mod.rs
src/network/: mod.rs
