[package]
name = "prophecy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
libp2p = { version = "0.52", features = [ "full" ] }
poem = "1.2"
poem-openapi = { version = "3.0.1", features = ["swagger-ui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
